--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="content">
                 <div class="menu contenedor">
-                    <a href="index.html" class="logo"><img src="imagenes/logo_index" alt="Logo"></a>
+                    <a href="index.html" class="logo"><img src="imagenes/logo_index.svg" alt="Logo"></a>
                     <input type="checkbox" id="menu"/>
                     <label for="menu">
                         <img src="imagenes/menu.png" alt="menu-icono">
